--- a/index.html
+++ b/index.html
@@ -6,3 +6,28 @@
 <p>This is more text.</p>
 </body>
 </html>
+
+    <html>
+
+        <head>
+            <script type="text/javascript" src="/path/to/brython.js"></script>
+        </head>
+
+        <body onload="brython()">
+
+            <script type="import datetime"
+                    Print(datetime.datetime.now())                          
+                          ">
+            from browser import document, alert
+
+            def echo(event):
+                alert(document["zone"].value)
+
+            document["mybutton"].bind("click", echo)
+            </script>
+
+            <input id="zone"><button id="mybutton">click !</button>
+
+        </body>
+
+    </html>
