--- a/index.html
+++ b/index.html
@@ -1,33 +1,11 @@
-<!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p>This is more text.</p>
-</body>
+    <body>
+        <script type="text/python">
+            from browser import document
+            from browser.html import A,B
+
+            document <= B("Brython")+"is an implementation of "
+            document <= A("Python",href="http://www.python.org")+" for web browsers"
+        </script>
+    </body>
 </html>
-
-    <html>
-
-        <head>
-            <script type="text/javascript" src="/path/to/brython.js"></script>
-        </head>
-
-        <body onload="brython()">
-
-            <script type="import datetime"
-                    Print(datetime.datetime.now())                          
-                          ">
-            from browser import document, alert
-
-            def echo(event):
-                alert(document["zone"].value)
-
-            document["mybutton"].bind("click", echo)
-            </script>
-
-            <input id="zone"><button id="mybutton">click !</button>
-
-        </body>
-
-    </html>
