--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
-<html>
-    <body>
-        <script type="text/python">
-            from browser import document
-            from browser.html import A,B
+    <html>
 
-            document <= B("Brython")+"is an implementation of "
-            document <= A("Python",href="http://www.python.org")+" for web browsers"
-        </script>
-    </body>
-</html>
+        <head>
+            <script src="brython.js"></script>
+        </head>
+
+        <body onload="brython()">
+
+            <script type="text/python">
+            from browser import document, alert
+
+            def echo(event):
+                alert(document["zone"].value)
+
+            document['mybutton'].bind('click', echo)
+            </script>
+
+            <input id="zone"><button id="mybutton">click !</button>
+
+        </body>
+
+    </html>
