--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
         <body onload="brython()">
 
             <script type="text/python">
-            from browser import document, alert
+            from browser import document
+            from browser.html import A,B
 
-            def echo(event):
-                alert(document["zone"].value)
-
-            document['mybutton'].bind('click', echo)
+            document <= B("Brython")+"is an implementation of "
+            document <= A("Python",href="http://www.python.org")+" for web browsers"
             </script>
 
             <input id="zone"><button id="mybutton">click !</button>
