--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             document <= A("Python",href="http://www.python.org")+" for web browsers"
             </script>
 
-            <input id="zone"><button id="mybutton">click !</button>
+            <input id="zone"><button id="mybutton">click me !</button>
 
         </body>
 
