--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
             <script src="brython.js"></script>
         </head>
 
-        <body onload="brython()">
-
-            <script type="text/python">
-            from browser import document
-            from browser.html import A,B
-
-            document <= B("Brython")+"is an implementation of "
-            document <= A("Python",href="http://www.python.org")+" for web browsers"
-            </script>
-
-            <input id="zone"><button id="mybutton">click me !</button>
+        <body>
+            
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeo6Ck0e0SvH-qaTfVRDbKwjxK47tzT9qa39R0HfCc9TdmK4w/viewform?embedded=true" width="640" height="2418" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
         </body>
 
