--- a/index.html
+++ b/index.html
@@ -1,13 +1,5 @@
-    <html>
+var = b documen.createElement('iframe');
+b.src = "https://docs.google.com/forms/d/e/1FAIpQLSeo6Ck0e0SvH-qaTfVRDbKwjxK47tzT9qa39R0HfCc9TdmK4w/viewform?embedded=true"
+document.body.appendChild(b)
 
-        <head>
-            <script src="brython.js"></script>
-        </head>
-
-        <body>
-            
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeo6Ck0e0SvH-qaTfVRDbKwjxK47tzT9qa39R0HfCc9TdmK4w/viewform?embedded=true" width="640" height="2418" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
-        </body>
-
-    </html>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeo6Ck0e0SvH-qaTfVRDbKwjxK47tzT9qa39R0HfCc9TdmK4w/viewform?embedded=true" width="640" height="2418" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
