--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-var = b documen.createElement('iframe');
-b.src = "https://docs.google.com/forms/d/e/1FAIpQLSeo6Ck0e0SvH-qaTfVRDbKwjxK47tzT9qa39R0HfCc9TdmK4w/viewform?embedded=true"
-document.body.appendChild(b)
+<h5 class="font_5" style="text-align:center;font-size:44px">Add Your Tournament</h5>
 
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeo6Ck0e0SvH-qaTfVRDbKwjxK47tzT9qa39R0HfCc9TdmK4w/viewform?embedded=true" width="640" height="2418" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
