--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-<h5 class="font_5" style="text-align:center;font-size:44px">Add Your Tournament</h5>
+<html>
+<body style="background-color: rgb(14,46,71);">
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeo6Ck0e0SvH-qaTfVRDbKwjxK47tzT9qa39R0HfCc9TdmK4w/viewform?embedded=true" width="640" height="2418" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<h5 class="font_5" style="text-align:center;font-size:44px;color:white;">Add Your Tournament</h5>
+
+<p align="center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeo6Ck0e0SvH-qaTfVRDbKwjxK47tzT9qa39R0HfCc9TdmK4w/viewform?embedded=true" width="640" height="2700" frameborder="1" marginheight="0" marginwidth="0">Loading…</iframe></p>
+
+</body>
+</html>
